# slipp

./: .env.example  .gitignore  404.html  CNAME  Makefile  README.md  TODO.md  index.html  pyproject.toml  sitemap-0.xml  sitemap-index.xml
_astro/: _basePickBy.O-aTTdAf.js  _baseUniq.DhZtZbZb.js  arc.DQQbr8VB.js  architectureDiagram-VXUJARFQ.BKmpBZvA.js  blockDiagram-VD42YOAC.C0B2vts-.js  c4Diagram-YG6GDRKO.Cm4ONIFX.js  channel.CGWT9Q8G.js  chunk-4BX2VUAB.BEZz57Cq.js  chunk-55IACEB6.CNK4toeb.js  chunk-B4BG7PRW.DVe9mODN.js  chunk-DI55MBZ5.yIi_wPlF.js  chunk-FMBD7UC4.CwVBPIC1.js  chunk-QN33PNHL.CguTCfNL.js  chunk-QZHKN3VN.ByXHgwaK.js  chunk-TZMSLE5B.ThwWXR9v.js  classDiagram-2ON5EDUG.B_mARsR5.js  clone.DDYdRg7Q.js  cose-bilkent-S5V4N54A.DoQBpl5B.js  dagre-6UL2VRFP.D2LeAFls.js  diagram-PSM6KHXK.BbgWBYBC.js  diagram-QEK2KX5R.BJS5Dq6G.js  diagram-S2PKOQOG.9lUk07Jm.js  erDiagram-Q2GNP2WA.t6kmwEFM.js  flowDiagram-NV44I4VS.xXLurBoU.js  ganttDiagram-JELNMOA3.W_jCLVW3.js  gitGraphDiagram-NY62KEGX.DDIOcy3J.js  graph.CpaLrZ-n.js  index.CbKoi19B.css  infoDiagram-WHAUD3N6.DgPUSiQj.js  journeyDiagram-XKPGCS4Q.DV8p2oYC.js  kanban-definition-3W4ZIXB7.CInoaL6X.js  layout.BbU45Jsy.js  linear.B8mff2mb.js  mermaid.core.DPVmFGWy.js  mindmap-definition-VGOIOE7T.2gZp14MI.js  page.C9V4FV3t.js  pieDiagram-ADFJNKIX.CY-LoD-s.js  quadrantDiagram-AYHSOK5B.BRqBuqfb.js  requirementDiagram-UZGBJVZJ.DxzQ0vRr.js  sankeyDiagram-TZEHDZUN.DJ3Tb_i7.js  (+6 more)
docs/: .gitignore  .prettierignore  astro.config.mjs  gigahost-api-raw.md  gigahost-api-reference.md  gigahost-reinstall-form-params.md  package-lock.json  package.json
docs/public/scripts/: parallax.js
docs/src/: env.d.ts  starlight-virtual.d.ts
docs/src/components/: Header.astro  Hero.astro  Logo.astro  PageSidebar.astro  PageTitle.astro  SiteTitle.astro  logo-hero.html  logo-nav.html
docs/src/icons/: Claude.astro  Markdown.astro  OpenAI.astro
docs/src/styles/: custom.css
getting-started/first-deploy/: index.html
getting-started/installation/: index.html
getting-started/quickstart/: index.html
guides/images/: index.html
guides/local-development/: index.html
guides/multi-project/: index.html
guides/public-exposure/: index.html
guides/secrets/: index.html
recipes/github-actions/: index.html
recipes/sveltekit-tunnel/: index.html
reference/cli/: index.html
reference/configuration/: index.html
src/slipp/: __init__.py  cli.py  constants.py  output.py
src/slipp/commands/: __init__.py  common.py  config.py  deploy.py  dns.py  domains.py  exec.py  host.py  hosts.py  image.py  images.py  launch.py  logo.py  logs.py  providers.py  provision.py  ps.py  resources.py  run.py  runs.py  secret.py  ssh.py  (+7 more)
(+227 files in other folders)
