[project]
name = "slipp"
version = "0.1.0"
description = "Build locally, slipp to production. 90% automation for self-hosted app deployments."
readme = "README.md"
authors = [
    { name = "Fredrik Angelsen", email = "fredrikangelsen@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.13.2",
    "ansible-runner>=2.4.2",
    "cryptography>=46.0.3",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "jwcrypto>=1.5.6",
    "paramiko>=4.0.0",
    "pydantic>=2.12.4",
    "python-dotenv>=1.2.1",
    "python-ulid>=3.1.0",
    "rich>=14.2.0",
    "rich-pyfiglet>=1.0.0",
    "ruamel-yaml>=0.18.16",
    "typer>=0.20.0",
]

[project.scripts]
slipp = "slipp:main"

[build-system]
requires = ["uv_build>=0.9.7,<0.10.0"]
build-backend = "uv_build"

[tool.setuptools.package-data]
slipp = ["playbooks/**/*"]

[tool.basedpyright]
typeCheckingMode = "standard"
